--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="lightBox">
+            <div class="lightBox_content">
+                <div class="lightBox_btn_close"></div>
+                <div class="lightBox_img">
+                    <img src="img/product.png" alt="產品圖片">
+                </div>
+                <div class="lightBox_text">
+                    <p class="lightBox_productName">經典錶帶</p>
+                    <p class="lightBox_priceLabel">NT$&nbsp;<span>3990</span></p>
+                    <p class="lightBox_productDescription">經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶</p>
+                </div>
+                <a href="#"><div class="btn btn_buyNow">直接購買</div></a>
+            </div>
+        </div>
         <header>
             <div class="content">
                 <div class="logo">
@@ -23,7 +37,8 @@
             <div class="content">
                 <h1 class="projectInfo_name">Zu Watch</h1>
                 <h1 class="projectInfo_description">為您量身打造的手錶</h1>
-                <p>目前已累積&nbsp;<span>3000000</span>&nbsp;台幣，<span>2405</span>&nbsp;人參與</p>
+                <p class="projectInfo_progressText_PC">目前已累積&nbsp;<span>3000000</span>&nbsp;台幣，<span>2405</span>&nbsp;人參與</p>
+                <p class="projectInfo_progressText_mobile">目前已累積&nbsp;<span>3000000</span>&nbsp;台幣</p>
                 <div class="progressBar_bg">
                     <div class="progressBar"></div>
                 </div>
@@ -38,184 +53,142 @@
                 <div class="prodectReward_list">
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                     <div class="prodectReward_list_box">
                         <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
+                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
                             <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
                         </div>
                         <div class="prodectReward_list_box_section2">
                             <p class="prodectReward_prodectName">經典錶帶</p>
                             <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <div class="btn btn_more">閱讀更多</div>
-                            <div class="btn btn_buyNow">直接購買</div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NTD$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                        </div>
-                        <div class="prodectReward_list_box_section3">
-                            <a href=""><div class="btn btn_more">閱讀更多</div></a>
-                            <a href=""><div class="btn btn_buyNow">直接購買</div></a>
+                            <div class="prodectReward_btn">
+                                <div class="btn btn_more">閱讀更多</div>
+                                <div class="btn btn_buyNow">直接購買</div>
+                            </div>
                         </div>
                     </div>
                 </div>
