--- a/index.html
+++ b/index.html
@@ -37,161 +37,20 @@
             <div class="content">
                 <h1 class="projectInfo_name">Zu Watch</h1>
                 <h1 class="projectInfo_description">為您量身打造的手錶</h1>
-                <p class="projectInfo_progressText_PC">目前已累積&nbsp;<span>3000000</span>&nbsp;台幣，<span>2405</span>&nbsp;人參與</p>
-                <p class="projectInfo_progressText_mobile">目前已累積&nbsp;<span>3000000</span>&nbsp;台幣</p>
+                <p class="projectInfo_progressText_PC">目前已累積&nbsp;<span class="projectInfo_money_goal">0</span>&nbsp;台幣，<span class="projectInfo_backer_count">0</span>&nbsp;人參與</p>
+                <p class="projectInfo_progressText_mobile">目前已累積&nbsp;<span class="projectInfo_money_goal">0</span>&nbsp;台幣</p>
                 <div class="progressBar_bg">
                     <div class="progressBar"></div>
                 </div>
                 <a class="projectInfo_more" href="#">了解更多<i class="fa fa-sort-desc" aria-hidden="true"></i></a>
             </div>
         </div>
-        <div class="prodectReward">
+        <div class="productReward">
             <div class="content">
-                <div class="prodectReward_title">
-                    <p>商品列表<span class="prodectReward_amount">15</span></p>
+                <div class="productReward_title">
+                    <p>商品列表<span class="productReward_amount">15</span></p>
                 </div>
-                <div class="prodectReward_list">
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prodectReward_list_box">
-                        <div class="prodectReward_list_box_section1">
-                            <p class="prodectReward_priceLabel">NT$&nbsp;<span>3990</span></p>
-                            <img class="prodectReward_prodectImg" src="img/product.png" alt="商品圖片">
-                        </div>
-                        <div class="prodectReward_list_box_section2">
-                            <p class="prodectReward_prodectName">經典錶帶</p>
-                            <p class="prodectReward_prodectDescription">上光場上光場上光場上光場上光場上光場上光場上光場上光場上光場</p>
-                            <div class="prodectReward_btn">
-                                <div class="btn btn_more">閱讀更多</div>
-                                <div class="btn btn_buyNow">直接購買</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="productReward_list"></div>
             </div>
         </div>
         <footer></footer>
