--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p class="lightBox_priceLabel">NT$&nbsp;<span>3990</span></p>
                     <p class="lightBox_productDescription">經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶</p>
                 </div>
-                <a href="#"><div class="btn btn_buyNow">直接購買</div></a>
+                <a href="#" class="btn btn_buyNow" target="_blank">直接購買</a>
             </div>
         </div>
         <header>
@@ -37,8 +37,8 @@
             <div class="content">
                 <h1 class="projectInfo_name">Zu Watch</h1>
                 <h1 class="projectInfo_description">為您量身打造的手錶</h1>
-                <p class="projectInfo_progressText_PC">目前已累積&nbsp;<span class="projectInfo_money_goal">0</span>&nbsp;台幣，<span class="projectInfo_backer_count">0</span>&nbsp;人參與</p>
-                <p class="projectInfo_progressText_mobile">目前已累積&nbsp;<span class="projectInfo_money_goal">0</span>&nbsp;台幣</p>
+                <p class="projectInfo_progressText_PC">目前已累積&nbsp;<span class="projectInfo_money_pledged">0</span>&nbsp;台幣，<span class="projectInfo_backer_count">0</span>&nbsp;人參與</p>
+                <p class="projectInfo_progressText_mobile">目前已累積&nbsp;<span class="projectInfo_money_pledged">0</span>&nbsp;台幣</p>
                 <div class="progressBar_bg">
                     <div class="progressBar"></div>
                 </div>
