--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="lightBox">
             <div class="lightBox_content">
                 <div class="lightBox_btn_close"></div>
-                <div class="lightBox_img">
-                    <img src="img/product.png" alt="產品圖片">
+                <div class="lightBox_imgBox">
+                    <img class="lightBox_img" src="img/product.png" alt="產品圖片">
                 </div>
                 <div class="lightBox_text">
                     <p class="lightBox_productName">經典錶帶</p>
-                    <p class="lightBox_priceLabel">NT$&nbsp;<span>3990</span></p>
+                    <p class="lightBox_priceLabel">NT$&nbsp;<span class="lightBox_priceLabel_price">3990</span></p>
                     <p class="lightBox_productDescription">經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶經典錶帶</p>
                 </div>
                 <a href="#" class="btn btn_buyNow" target="_blank">直接購買</a>
